Harden briefs detail Start Discussion link markup for clean build parsing