@@ -2,6 +2,7 @@ package com.currentloop.backend.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -14,51 +15,62 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-@Bean
-public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-http
-.cors(Customizer.withDefaults())
-.csrf(csrf -> csrf.disable())
-.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-.authorizeHttpRequests(auth -> auth
-.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-.requestMatchers("/api/auth/**").permitAll()
-.anyRequest().permitAll()
-)
-.formLogin(form -> form.disable())
-.httpBasic(basic -> basic.disable());
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOriginPatterns;
 
-return http.build();
-}
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        http
+                .cors(Customizer.withDefaults())
+                .csrf(csrf -> csrf.disable())
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .anyRequest().permitAll()
+                )
+                .formLogin(form -> form.disable())
+                .httpBasic(basic -> basic.disable());
 
-@Bean
-public CorsConfigurationSource corsConfigurationSource() {
-CorsConfiguration config = new CorsConfiguration();
+        return http.build();
+    }
 
-config.setAllowedOriginPatterns(Arrays.asList(
-"http://localhost:3000",
-"https://currentloop.vercel.app",
-"https://*.vercel.app"
-));
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration config = new CorsConfiguration();
 
-config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-config.setAllowedHeaders(Arrays.asList("*"));
-config.setAllowCredentials(true);
-config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        List<String> patterns = new ArrayList<>();
+        if (allowedOriginPatterns != null && !allowedOriginPatterns.isBlank()) {
+            patterns = Arrays.stream(allowedOriginPatterns.split(","))
+                    .map(String::trim)
+                    .filter(value -> !value.isEmpty())
+                    .toList();
+        }
+        if (patterns.isEmpty()) {
+            patterns = List.of("http://localhost:3000");
+        }
 
-UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-source.registerCorsConfiguration("/**", config);
-return source;
-}
+        config.setAllowedOriginPatterns(patterns);
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowCredentials(true);
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
 
-@Bean
-public PasswordEncoder passwordEncoder() {
-return new BCryptPasswordEncoder();
-}
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        return source;
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
 }
